--- a/index.html
+++ b/index.html
@@ -1,37 +1,50 @@
 <!DOCTYPE html>
-<html>
+<html lang = "ru">
+
+
 <head>
-    <title>Приложение To-Do List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/todo.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bad+Script">
-    <link rel="shortcut icon" href="assets/favicon.ico">
-    <link rel="icon" type="image/gif" href="assets/animated_favicon.gif">
+    <meta charset = "UTF-8">
+    <title> Список задач </title>
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "style.css">
+    <link rel = "stylesheet" href = "https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+          integrity = "sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin = "anonymous">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Bad+Script">
+    <link rel = "shortcut icon" href = "assets/favicon.ico">
+    <link rel = "icon" type = "image/gif" href = "assets/animated_favicon.gif">
 </head>
+
+
 <body>
-<div id="todo">
-    <h1>Мои списки дел <i id="pensil" class="fas fa-pencil-alt"></i></h1>
-    <input type="text" placeholder="Добавить список">
-    <ul class="todos">
-        <li><span class="todo-text">Вымыть кухню</span><span class="todo-trash"><i class="fas fa-trash-alt"></i></span></li>
-        <li><span class="todo-text">Пойти в театр</span><span class="todo-trash"><i class="fas fa-trash-alt"></i></span></li>
+
+<div id = "listList">
+    <h1> Мій список задач <i id = "pensil" class = "fas fa-pencil-alt"> </i> </h1>
+    <input type = "taskInput" placeholder = "Добавити справу">
+    <ul class = "taskReady">
+        <li> <span class = "taskText"> Прокинутися </span>
+            <span class = "taskTrash"> <i class = "fas fa-trash-alt"> </i> </span> </li>
+        <li> <span class = "taskText"> Піти вбитися </span>
+            <span class = "taskTrash"> <i class = "fas fa-trash-alt"> </i> </span> </li>
     </ul>
-    <div id="buttons">
-        <button class="save">Сохранить</button>
-        <button class="clear">Очистить</button>
-        <button class="showTips">Справка</button>
+
+    <div id = "buttons">
+        <button class = "taskSave"> Зберегти </button>
+        <button class = "taskClear"> Очистити </button>
+        <button class = "taskTips"> Довідка </button>
     </div>
 </div>
+
 <div id = "overlay">
-    <a href="javascript:void(0)" class="closeTips">&times;</a>
-    <ul class="tips">
-        <li>Чтобы спрятать или показать поле ввода, кликните на карандаш</li>
-        <li>Для добавления списка дел напишите текст в поле ввода и нажмите Ввод</li>
-        <li>Чтобы удалить один пункт, наведите на него и нажмите на значок корзины</li>
-        <li>Чтобы удалить все списки дел, нажмите "Очистить"</li>
-        <li>Нажмите "Сохранить", чтобы сохранить список дел на потом</li>
+    <ul class = "listTips">
+        <li> Щоб сховати або показати поле введення, клікніть на олівець </li>
+        <li> Для додати справу напишіть текст в поле введення і натисніть "Enter" </li>
+        <li> Щоб видалити один пункт, наведіть на нього і натисніть на значок кошика </li>
+        <li> Щоб видалити весь список, натисніть "Очистити" </li>
+        <li> Натисніть "Зберегти", щоб зберегти список справ на потім </li>
     </ul>
 </div>
+
 </body>
+
+
 </html>
