--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <li> Натисніть "Зберегти", щоб зберегти список справ на потім </li>
     </ul>
 </div>
-
+<script src = "script.js"></script>
 </body>
 
 
