--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset = "UTF-8">
     <title> Список задач </title>
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <link rel = "stylesheet" href = "style.css">
     <link rel = "stylesheet" href = "https://use.fontawesome.com/releases/v5.0.13/css/all.css"
           integrity = "sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin = "anonymous">
@@ -19,12 +20,8 @@
 
 <div id = "listList">
     <h1> Мій список задач <i id = "pensil" class = "fas fa-pencil-alt"> </i> </h1>
-    <input type = "taskInput" placeholder = "Добавити справу">
-    <ul class = "taskReady">
-        <li> <span class = "taskText"> Прокинутися </span>
-            <span class = "taskTrash"> <i class = "fas fa-trash-alt"> </i> </span> </li>
-        <li> <span class = "taskText"> Піти вбитися </span>
-            <span class = "taskTrash"> <i class = "fas fa-trash-alt"> </i> </span> </li>
+    <input id = "taskInput" placeholder = "Добавити справу">
+    <ul class = "taskReady" id = "task">
     </ul>
 
     <div id = "buttons">
