--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 <div id = "listList">
     <h1> Мій список задач <i id = "pensil" class = "fas fa-pencil-alt"> </i> </h1>
     <input id = "taskInput" placeholder = "Добавити справу">
-    <ul class = "taskReady" id = "task">
+    <ul class = "taskReady" id = "taskReady">
     </ul>
 
     <div id = "buttons">
-        <button class = "taskSave"> Зберегти </button>
-        <button class = "taskClear"> Очистити </button>
-        <button class = "taskTips"> Довідка </button>
+        <button class = "taskSave" id = "taskSave"> Зберегти </button>
+        <button class = "taskClear" id = "taskClear"> Очистити </button>
+        <button class = "taskTips" id = "taskTips"> Довідка </button>
     </div>
 </div>
 
@@ -35,7 +35,7 @@
     <ul class = "listTips">
         <li> Щоб сховати або показати поле введення, клікніть на олівець </li>
         <li> Для додати справу напишіть текст в поле введення і натисніть "Enter" </li>
-        <li> Щоб видалити один пункт, наведіть на нього і натисніть на значок кошика </li>
+        <li> Щоб видалити один пункт, наведіть на нього і клікніть на кошик </li>
         <li> Щоб видалити весь список, натисніть "Очистити" </li>
         <li> Натисніть "Зберегти", щоб зберегти список справ на потім </li>
     </ul>
