--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button class = "taskSave" id = "taskSave"> Зберегти </button>
         <button class = "taskClear" id = "taskClear"> Очистити </button>
         <button class = "taskTips" id = "taskTips"> Довідка </button>
+        <button class = "taskDelete" id = "taskDelete"> Видалені </button>
     </div>
 </div>
 
