--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> Список задач </title>
     <meta name = "viewport" content = "width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel = "stylesheet" href = "style.css">
     <link rel = "stylesheet" href = "https://use.fontawesome.com/releases/v5.0.13/css/all.css"
           integrity = "sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin = "anonymous">
@@ -32,6 +33,8 @@
     </div>
 </div>
 
+<div class="data-php" data-attr="<?=$a; ?>"></div>
+
 <div id = "overlay">
     <ul class = "listTips">
         <li> Щоб сховати або показати поле введення, клікніть на олівець </li>
@@ -41,7 +44,7 @@
         <li> Натисніть "Зберегти", щоб зберегти список справ на потім </li>
     </ul>
 </div>
-<script src = "script.js"></script>
+<script src = "web.js"></script>
 </body>
 
 
