--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
     </ul>
 
     <div id = "buttons">
-        <button class = "taskSave" id = "taskSave"> Зберегти </button>
         <button class = "taskClear" id = "taskClear"> Очистити </button>
         <button class = "taskTips" id = "taskTips"> Довідка </button>
         <button class = "taskDelete" id = "taskDelete"> Видалені </button>
@@ -44,7 +43,7 @@
         <li> Натисніть "Зберегти", щоб зберегти список справ на потім </li>
     </ul>
 </div>
-<script src = "web.js"></script>
+<script src = "script.js"></script>
 </body>
 
 
